ingress/deployment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cv-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.james-mellors.com' ) {
        rewrite ^ https://james-mellors.com/ permanent;
      }
spec:
  tls:
  - hosts:
    - james-mellors.com
    secretName: tls-secret
  rules:
  - host: www.james-mellors.com
  - http:
      paths:
      - backend:
          serviceName: cv-devops
          servicePort: 8001
        path: /(.*)
      # - backend:
      #     serviceName: mello-api-v4
      #     servicePort: 80
      #   path: /api(.*)
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: api-ingress
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     #nginx.ingress.kubernetes.io/rewrite-target: /$1
#     cert-manager.io/cluster-issuer: letsencrypt
# spec:
#   tls:
#   - hosts:
#     - www.james-mellors.com
#     - james-mellors.com
#     secretName: tls-secret
#   rules:
#   - host: james-mellors.com
#   - http:
#       paths:
#       - backend:
#           serviceName: cv-devops
#           servicePort: 8001
#         path: /(.*)
#       - backend:
#           serviceName: mello-api-v4
#           servicePort: 80
#         path: /api(.*)
