ingress/deployment2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metrics
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /test(.*)
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: api-ingress
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     #nginx.ingress.kubernetes.io/rewrite-target: /$1
#     cert-manager.io/cluster-issuer: letsencrypt
# spec:
#   tls:
#   - hosts:
#     - www.james-mellors.com
#     - james-mellors.com
#     secretName: tls-secret
#   rules:
#   - host: www.james-mellors.com
#   - http:
#       paths:
#       - backend:
#           serviceName: mello-api-v4
#           servicePort: 80
#         path: /api(.*)
